# giant-contact

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  pytest.ini  settings.py  setup.cfg
.github/workflows/: build-dev.yml  build-publish-dev.yml  build-test.yml  deploy-branch.yml  deploy-dev.yml  deploy-live.yml  ecologi.yml  lint.yml  test-and-publish-dev
contact/: admin.py  cms_apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_auto_20200616_1318.py  0003_add_climatecare_fields.py
contact/templates/: contact_index.html  contact_success.html  contact_us.html
contact/templates/contact/email/: message.html  message.txt
contact/templates/email/: message.html  message.txt
contact/tests/: conftest.py  test_cms_apps.py  test_forms.py  test_giant_contact.py  test_models.py  test_views.py  urls.py
tests/: test_giant_contact.py
