[tool.poetry]
name = "giant-contact"
version = "0.6"
description = "Adds a generic contact app for use with Giant projects"
authors = ["Will-Hoey <will.hoey@giantmade.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/giantmade/giant-contact"
repository = "https://github.com/giantmade/giant-contact"
keywords = ["contact", "app"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]
packages = [
    { include = "contact" }
]

[tool.poetry.dependencies]
python = "^3.6"
giant-mixins = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
django = "2.2"
django-cms = "^3.7.2"
black = "^19.10b0"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.0"
pytest-mock = "^3.2.0"
six = "^1.15.0"

[[tool.poetry.source]]
name = "TestPyPi"
url = "https://test.pypi.org/simple/"
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
