[tool.poetry]
name = "giant-contact"
version = "0.6"
description = "Adds a generic contact app for use with Giant projects"
authors = ["Will-Hoey <will.hoey@giantmade.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/giantmade/giant-contact"
repository = "https://github.com/giantmade/giant-contact"
keywords = ["contact", "app"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]
packages = [
    { include = "contact" }
]

[tool.poetry.dependencies]
python = "^3.9"
giant-mixins = "*"

[tool.poetry.dev-dependencies]
pytest = "~7"
django = "~3"
django-cms = "~3"
black = "~22"
pytest-django = "~3"
pytest-cov = "~4"
pytest-mock = "~3"
six = "~1"

[[tool.poetry.source]]
name = "TestPyPi"
url = "https://test.pypi.org/simple/"
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
